@@ -123,6 +123,7 @@
 			<toolbutton name="changeviews" action="NextView" tooltip="Change views" icon="view_change.png"/>
 			<toggletoolbutton name="cubicclip" action="ToggleCubicClip" tooltip="Cubic clip the camera view" icon="view_cubicclipping.png"/>
 		<separator/>
+			<toolbutton name="selectcompletetall" action="SelectCompleteTall" tooltip="Select complete tall" icon="selection_selectcompletetall.png" />
 			<toolbutton name="selecttouching" action="SelectTouching" tooltip="Select touching" icon="selection_selecttouching.png"/>
 			<toolbutton name="selectinside" action="SelectInside" tooltip="Select inside" icon="selection_selectinside.png"/>
 		<separator/>
