@@ -1,3 +1,7 @@
+04/03/2007
+greebo
+- Added Select Complete Tall feature.
+
 03/03/2007
 OrbWeaver
 - Fixed entity class inheritance, entities now list custom properties in the
